# url-threat-shortener

./: Cargo.toml  LICENSE  MANUAL.md  README.md  url_store.json
data/: known_bad.txt
examples/: mixed-urls.txt  safe-urls.txt  suspicious-urls.txt
src/: lib.rs  main.rs  scanner.rs  shortener.rs
tests/: integration_test.rs
