[package]
name = "url-threat-shortener"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linkcutter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
strsim = "0.11"
rand = "0.8"
regex = "1"
dialoguer = "0.11"
